# agent-ai

./: .flake8  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
.github/: copilot-instructions.md
scripts/: check_types.py
src/: cli.py  py.typed  settings.py
src/commands/: __init__.py  base.py  math_expert.py
src/core/: __init__.py  aws.py
src/core/llm/: __init__.py  aws.py
src/env/local/: .env.dist
src/modules/: llm.py  prompts.py  tools.py
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_performance.py
tests/fixtures/: mock_utils.py  test_data.py
tests/integration/: test_application_integration.py  test_cli_integration.py
tests/unit/: test_commands.py  test_core_aws.py  test_core_llm_aws.py  test_llm.py  test_prompts.py  test_settings.py  test_tools.py
